--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
  <meta charset="utf-8">
  <title>タイトル</title>
+ <style type="text/css">
+  p{color:blue}
+ </style>
  <link rel="stylesheet" href="css/default.css" type="text/css">
 </head>
 <body>
