--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
  <link rel="stylesheet" href="css/default.css" type="text/css">
 </head>
 <body>
+<h1><span>★</span>こんにちは<span>★</span></h1>
+<h1><span><a href=“../”>★</a></span>こんにちは<span>★</span></h1>
+<p id=“lead”>こんにちは</p>
+<p class=“greeting”>こんにちは</p>
+
+
 </body>
 </html>
