--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
- <meta charset="utf-8">
- <title>タイトル</title>
- <style type="text/css">
-  p{color:blue}
- </style>
- <link rel="stylesheet" href="css/default.css" type="text/css">
-</head>
-<body>
-<h1><span>★</span>こんにちは<span>★</span></h1>
-<h1><span><a href=“../”>★</a></span>こんにちは<span>★</span></h1>
-<p id=“lead”>こんにちは</p>
-<p class=“greeting”>こんにちは</p>
+!DOCTYPE html
+html lang=“ja”
+    head
+        meta charset=“utf-8”
+        titleタイトルtitle
+        link rel=“stylesheet” href=“cssdefault.css” type=“textcss”
+    head
+    body
+        h1span★spanこんにちはspan★spanh1
+        h1spana href=“..”★aspanこんにちはspan★spanh1
+        p id=“lead”こんにちはp
+        p class=“greeting”こんにちはp
+        h1ネコh1
+        pspan class=cat maleオスネコspanp
+        pspan class=cat femaleメスネコspanp
+    body
+html
 
-
-</body>
-</html>
